FIXGeoLoadForServer убрана загрузка файлов,создание папки, убрал теперь уже не нужные переменные свои