@@ -1,147 +1,94 @@
-package ru.team38.userservice.services;
+    package ru.team38.userservice.services;
 
-import jakarta.annotation.PostConstruct;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.poi.ss.usermodel.*;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.ResponseEntity;
-import org.springframework.scheduling.annotation.EnableScheduling;
-import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Component;
-import org.springframework.stereotype.Service;
-import ru.team38.common.dto.geography.CityDto;
-import ru.team38.common.dto.geography.CountryDto;
-import ru.team38.userservice.data.repositories.GeoRepository;
+    import jakarta.annotation.PostConstruct;
+    import lombok.RequiredArgsConstructor;
+    import lombok.extern.slf4j.Slf4j;
+    import org.apache.poi.ss.usermodel.*;
+    import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+    import org.springframework.beans.factory.annotation.Value;
+    import org.springframework.http.ResponseEntity;
+    import org.springframework.scheduling.annotation.EnableScheduling;
+    import org.springframework.scheduling.annotation.Scheduled;
+    import org.springframework.stereotype.Component;
+    import org.springframework.stereotype.Service;
+    import ru.team38.common.dto.geography.CityDto;
+    import ru.team38.common.dto.geography.CountryDto;
+    import java.io.*;
+    import java.net.HttpURLConnection;
+    import java.net.URL;
+    import java.util.*;
+    import java.util.concurrent.atomic.AtomicLong;
+    import java.util.stream.Collectors;
+    import java.util.zip.ZipEntry;
+    import java.util.zip.ZipInputStream;
 
-import java.io.*;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
+    import ru.team38.userservice.data.repositories.GeoRepository;
 
-@Service
-@Slf4j
-@EnableScheduling
-@Component
-@RequiredArgsConstructor
-public class GeoService {
-    private final GeoRepository geoRepository;
-    @Value("${geoService.urlData}")
-    private String targetSiteUrl;
-    @Value("${geoService.archivePath}")
-    private String archivePath;
-    @Value("${geoService.excelPath}")
-    private String excelPath;
-    @Value("${geoService.folderPath}")
-    private String folderPath;
+    @Service
+    @Slf4j
+    @EnableScheduling
+    @Component
+    @RequiredArgsConstructor
+    public class GeoService {
+        private final GeoRepository geoRepository;
+        @Value("${geoService.urlData}")
+        private String targetSiteUrl;
 
-    @PostConstruct
-    @Scheduled(cron = "0 0 0 1 */6 ?")
-    public void loadGeoData() {
-        if (isFileDownloadedAndUsed()) {
-            log.info("Обновление файла Excel не требуется");
-            return;
-        }
-        try {
-            log.info("База данных стран устарела или отсутствует, запуск обновления");
-            deleteFile(excelPath);
-            createFolder(folderPath);
-            downloadFile(targetSiteUrl, archivePath);
-            extractExcelFromArchive(archivePath, excelPath);
-            deleteFile(archivePath);
-            log.info("Файл Excel успешно сохранен по пути: {}", excelPath);
-        } catch (IOException e) {
-            log.error("Ошибка при выполнении загрузки геоданных", e);
-            return;
-        }
-        clearCountriesTable();
-        clearCitiesTable();
-        parseExcelAndSaveData();
-    }
-
-    public boolean isFileDownloadedAndUsed() {
-        File file = new File(excelPath);
-        if (!file.exists()) {
-            return false;
-        }
-        long lastDownloadTime = file.lastModified();
-        LocalDateTime currentTime = LocalDateTime.now();
-        LocalDateTime sixMonthsAgo = currentTime.minusMonths(6);
-        boolean isDownloadedAndUsed = LocalDateTime.ofInstant(Instant.ofEpochMilli(lastDownloadTime),
-                ZoneId.systemDefault()).isAfter(sixMonthsAgo);
-        if (isDownloadedAndUsed) {
-            log.info("Обновление баз данных стран не требуется т.к прошло менее пол года");
-        }
-        return isDownloadedAndUsed;
-    }
-
-    private void createFolder(String folderPath) throws IOException {
-        Path folder = Path.of(folderPath);
-        if (!Files.exists(folder)) {
-            Files.createDirectories(folder);
-        }
-    }
-
-    private void downloadFile(String url, String filePath) throws IOException {
-        try (BufferedInputStream in = new BufferedInputStream(new URL(url).openStream());
-             FileOutputStream out = new FileOutputStream(filePath);
-             BufferedOutputStream bufferedOut = new BufferedOutputStream(out)) {
-            byte[] buffer = new byte[1024];
-            int bytesRead;
-            while ((bytesRead = in.read(buffer, 0, 1024)) != -1) {
-                bufferedOut.write(buffer, 0, bytesRead);
+        @PostConstruct
+        @Scheduled(cron = "0 0 0 1 */6 ?")
+        public void loadGeoData() {
+            if (geoRepository.areTablesEmpty()) {
+                log.info("Таблицы геоданных пустые. Начинается заполнение...");
+                clearCountriesTable();
+                clearCitiesTable();
+                parseExcelAndSaveData();
+            } else {
+                log.info("Таблицы геоданных уже содержат данные. Пропускается загрузка новых данных.");
             }
         }
-    }
 
-    private void extractExcelFromArchive(String archivePath, String excelPath) throws IOException {
-        try (ZipInputStream zipInputStream = new ZipInputStream(new BufferedInputStream(Files
-                .newInputStream(Path.of(archivePath))))) {
-            ZipEntry entry;
-            while ((entry = zipInputStream.getNextEntry()) != null) {
-                if (!entry.isDirectory() && entry.getName().endsWith(".xlsx")) {
-                    Files.copy(zipInputStream, Path.of(excelPath), StandardCopyOption.REPLACE_EXISTING);
-                    break;
+        private void clearCountriesTable() {
+            geoRepository.clearCountriesTable();
+        }
+
+        private void clearCitiesTable() {
+            geoRepository.clearCitiesTable();
+        }
+
+        private void parseExcelAndSaveData() {
+            try {
+                URL url = new URL(targetSiteUrl);
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("GET");
+                int responseCode = connection.getResponseCode();
+                if (responseCode == HttpURLConnection.HTTP_OK) {
+                    InputStream archiveInputStream = connection.getInputStream();
+                    try (ZipInputStream zipInputStream = new ZipInputStream(archiveInputStream)) {
+                        ZipEntry entry;
+                        while ((entry = zipInputStream.getNextEntry()) != null) {
+                            if (entry.getName().equals("worldcities.xlsx")) {
+                                Workbook workbook = new XSSFWorkbook(zipInputStream);
+                                Sheet countriesSheet = workbook.getSheet("Sheet1");
+                                List<CountryDto> countries = parseCountriesSheet(countriesSheet);
+                                saveCountriesToDatabase(countries);
+                                Sheet citiesSheet = workbook.getSheet("Sheet1");
+                                List<CityDto> cities = parseCitiesSheet(citiesSheet, countries);
+                                saveCitiesToDatabase(cities);
+                                workbook.close();
+                                break;
+                            }
+                        }
+                    }
+                } else {
+                    log.error("Ошибка при получении архива. Код ответа: {}", responseCode);
                 }
+                connection.disconnect();
+            } catch (IOException e) {
+                log.error("Ошибка при обработке файла Excel и сохранении данных", e);
             }
         }
-    }
 
-    private void deleteFile(String filePath) throws IOException {
-        Files.deleteIfExists(Path.of(filePath));
-    }
-
-    private void clearCountriesTable() {
-        geoRepository.clearCountriesTable();
-    }
-
-    private void clearCitiesTable() {
-        geoRepository.clearCitiesTable();
-    }
-
-    private void parseExcelAndSaveData() {
-        try (FileInputStream fis = new FileInputStream(excelPath);
-             Workbook workbook = WorkbookFactory.create(fis)) {
-            Sheet countriesSheet = workbook.getSheet("Sheet1");
-            List<CountryDto> countries = parseCountriesSheet(countriesSheet);
-            saveCountriesToDatabase(countries);
-            Sheet citiesSheet = workbook.getSheet("Sheet1");
-            List<CityDto> cities = parseCitiesSheet(citiesSheet, countries);
-            saveCitiesToDatabase(cities);
-        } catch (Exception e) {
-            log.error("Ошибка при обработке файла Excel и сохранении данных", e);
-        }
-    }
-
-    private List<CountryDto> parseCountriesSheet(Sheet countriesSheet) {
+            private List<CountryDto> parseCountriesSheet(Sheet countriesSheet) {
         List<CountryDto> countries = new ArrayList<>();
         TreeSet<String> uniqueTitles = new TreeSet<>();
         boolean skipRow = false;
@@ -172,43 +119,43 @@ public class GeoService {
         return countries;
     }
 
-    private void saveCountriesToDatabase(List<CountryDto> countries) {
-        geoRepository.saveCountry(countries);
-    }
+        private void saveCountriesToDatabase(List<CountryDto> countries) {
+            geoRepository.saveCountry(countries);
+        }
 
-    private List<CityDto> parseCitiesSheet(Sheet citiesSheet, List<CountryDto> countries) {
-        Set<CityDto> uniqueCities = new TreeSet<>(Comparator.comparingLong(CityDto::getId));
-        long id = 0;
-        for (Row row : citiesSheet) {
-            String title = row.getCell(1).getStringCellValue();
-            boolean isDeleted = false;
-            String countryTitle = row.getCell(4).getStringCellValue();
-            if (title.equals("city_ascii")) {
-                continue;
-            }
-            Long countryId = null;
-            for (CountryDto country : countries) {
-                if (country.getTitle().equals(countryTitle)) {
-                    countryId = country.getId();
-                    break;
+        private List<CityDto> parseCitiesSheet(Sheet citiesSheet, List<CountryDto> countries) {
+            Set<CityDto> uniqueCities = new TreeSet<>(Comparator.comparingLong(CityDto::getId));
+            long id = 0;
+            for (Row row : citiesSheet) {
+                String title = row.getCell(1).getStringCellValue();
+                boolean isDeleted = false;
+                String countryTitle = row.getCell(4).getStringCellValue();
+                if (title.equals("city_ascii")) {
+                    continue;
+                }
+                Long countryId = null;
+                for (CountryDto country : countries) {
+                    if (country.getTitle().equals(countryTitle)) {
+                        countryId = country.getId();
+                        break;
+                    }
+                }
+                if (countryId != null) {
+                    CityDto city = CityDto.builder()
+                            .id(id++)
+                            .title(title)
+                            .isDeleted(isDeleted)
+                            .countryId(countryId)
+                            .build();
+                    uniqueCities.add(city);
                 }
             }
-            if (countryId != null) {
-                CityDto city = CityDto.builder()
-                        .id(id++)
-                        .title(title)
-                        .isDeleted(isDeleted)
-                        .countryId(countryId)
-                        .build();
-                uniqueCities.add(city);
-            }
+            return uniqueCities.stream().sorted(Comparator.comparing(CityDto::getTitle)).collect(Collectors.toList());
         }
-        return uniqueCities.stream().sorted(Comparator.comparing(CityDto::getTitle)).toList();
-    }
 
-    private void saveCitiesToDatabase(List<CityDto> cities) {
-        geoRepository.saveCity(cities);
-    }
+        private  void saveCitiesToDatabase(List<CityDto> cities) {
+            geoRepository.saveCity(cities);
+        }
 
     public ResponseEntity<List<CountryDto>> getCountries() {
         List<CountryDto> countries = geoRepository.getAllCountries();
@@ -222,14 +169,17 @@ public class GeoService {
             List<String> cityList = country.getCities();
             AtomicLong idCounter = new AtomicLong(1);
             cityDtos = cityList.stream()
-                    .map(city -> CityDto.builder()
-                            .id(idCounter.getAndIncrement())
-                            .isDeleted(false)
-                            .title(city)
-                            .countryId(Long.valueOf(countryId))
-                            .build())
-                    .toList();
+                    .map(city -> {
+                        CityDto cityDto = CityDto.builder()
+                                .id(idCounter.getAndIncrement())
+                                .isDeleted(false)
+                                .title(city)
+                                .countryId(Long.valueOf(countryId))
+                                .build();
+                        return cityDto;
+                    })
+                    .collect(Collectors.toList());
         }
         return cityDtos;
+        }
     }
-}
